--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "homepage": "https://github.com/jsanahuja/jquery.instagramFeed",
   "version": "1.1.3",
   "keywords": [
-    "instagram", "feed", "instagramfeed", "without", "access", "token"
+    "instagram",
+    "feed",
+    "instagramfeed",
+    "without",
+    "access",
+    "token"
   ],
   "author": {
     "name": "Javier Sanahuja",
