--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-contrib-qunit": "^1.3.0"
+    "grunt": "^1.0.4",
+    "grunt-contrib-qunit": "^3.1.0",
+    "grunt-node-minify": "^1.5.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "dist": "grunt dist"
   }
 }
