--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jquery.instagramFeed",
   "description": "Instagram Feed without access token. Not using the Instagram API",
   "homepage": "https://github.com/jsanahuja/jquery.instagramFeed",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "keywords": [
     "instagram",
     "feed",
@@ -33,6 +33,6 @@
   },
   "scripts": {
     "test": "grunt test",
-    "dist": "grunt dist"
+    "build": "grunt build"
   }
 }
