--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jquery.instagramFeed",
   "description": "Instagram Feed without access token. Not using the Instagram API",
   "homepage": "https://github.com/jsanahuja/jquery.instagramFeed",
-  "version": "1.2.6",
+  "version": "1.2.7",
   "keywords": [
     "instagram",
     "feed",
@@ -18,7 +18,7 @@
   "contributors": [
     {
       "name": "Cristian Sanahuja",
-      "email": "csanahuja@gmail.com"
+      "email": "csanahuja10@gmail.com"
     }
   ],
   "repository": {
@@ -29,7 +29,10 @@
   "devDependencies": {
     "grunt": "^1.1.0",
     "grunt-contrib-qunit": "^3.1.0",
-    "grunt-node-minify": "^1.5.0"
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "babel-preset-minify": "^0.5.1",
+    "grunt-babel": "^8.0.0"
   },
   "scripts": {
     "test": "grunt test",
