--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "grunt": "^1.1.0",
-    "grunt-contrib-qunit": "^3.1.0",
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "babel-preset-minify": "^0.5.1",
-    "grunt-babel": "^8.0.0"
+    "grunt": "^1.1.0",
+    "grunt-babel": "^8.0.0",
+    "grunt-contrib-qunit": "^3.1.0"
   },
   "scripts": {
     "test": "grunt test",
